--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 2.02 (4 June 2016)
+  * Changed URL for book
+
 Version 2.01 (30 October 2012)
 	* NAMESPACE added and .First.lib removed.
 
