--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Version 2.03 (12 Feb 2017)
+  * Removed tseries dependency
+
 Version 2.02 (4 June 2016)
   * Changed URL for book
 
@@ -5,7 +8,7 @@ Version 2.01 (30 October 2012)
 	* NAMESPACE added and .First.lib removed.
 
 Version 2.00 (7 September 2009)
-    * Package removed from forecasting bundle
+  * Package removed from forecasting bundle
 
 For details of earlier versions, please see the Changelog of the forecast package.
 
